fix : 카드팩 개봉 & 인벤토리 소모 수정